// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.providers.aws.eks;

option go_package = "namespacelabs.dev/foundation/providers/aws/eks";

message EKSCluster {
    string name        = 1;
    string arn         = 2;
    string oidc_issuer = 3;
    string vpc_id      = 4;
    // Whether the "oidc_issuer" is a registered OIDC provider.
    // When false but needed, we ask the user to register the OIDC provider similar to this:
    //   https://docs.aws.amazon.com/eks/latest/userguide/enable-iam-roles-for-service-accounts.html
    bool has_oidc_provider = 5;
}

message EKSServerDetails {
    string computed_iam_role_name = 1;  // This role is not instantiated by default.
}