// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.providers.aws.iam;

option go_package = "namespacelabs.dev/foundation/providers/aws/iam";

import "schema/schema.proto";

message OpEnsureRole {
    string                   role_name               = 1;
    string                   description             = 2;
    string                   assume_role_policy_json = 3;  // Serialized iam.PolicyDocument.
    repeated Tag             tag                     = 4;
    foundation.schema.Server for_server              = 5;  // If specified, will generate tags that associate the role with the server.
}

message OpAssociatePolicy {
    string role_name = 1;

    string policy_name = 2;
    string policy_json = 3;  // Serialized iam.PolicyDocument.
}

message Tag {
    string key   = 1;
    string value = 2;
}